--- a/main.css
+++ b/main.css
@@ -1,48 +1,3 @@
-.container{margin: 0 auto;}
-.asd{top:750px;}
-
-#popup {
-  visibility: hidden;
-  opacity: 0;
-  margin-top: -300px;
-  display: none;
-}
-#popup:target {
-  visibility:visible;
-  opacity: 1;
-  background-color: rgba(0,0,0,0.8);
-  display:block;
-  position: fixed;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  margin:0;
-  z-index: 999;
-  transition:all 1s;
-}
-.popup-contenedor {
-  position: relative;
-  margin:7% auto;
-  padding:30px 50px;
-  background-color: #fafafa;
-  color:#333;
-  border-radius: 3px;
-  width:50%;
-}
-a.popup-cerrar {
-  position: absolute;
-  top:3px;
-  right:3px;
-  background-color: #333;
-  padding:7px 10px;
-  font-size: 20px;
-  text-decoration: none;
-  line-height: 1;
-  color:#fff;
-}
-
-
 html,
 body {
   height: 100%;
@@ -75,7 +30,7 @@ a {
 
 .modal-window {
   position: fixed;
-  background-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(245, 202, 10, 0.6);
   top: 0;
   right: 0;
   bottom: 0;
@@ -94,7 +49,7 @@ a {
 }
 
 .modal-window>div {
-  width: 400px;
+  width: 200px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -133,3 +88,23 @@ a {
 i {
   vertical-align: middle;
 }
+
+header{width: 100%;
+height: 40px;
+background-color: darkorange;
+position: absolute;
+z-index: 999;}
+
+header p{
+  font-size: 14px;
+  text-align: center;
+  color: white;
+;}
+
+
+.mapboxgl-ctrl-geocoder {
+
+  min-width: 300px!important;
+  
+}
+
